# Semestralna_praca_udsp

./: .gitignore  CMakeLists.txt  README.md  main.c
header_file/: client_app.h  computer_component.h  registration_system.h  registration_system_responses.h  socket.h  socket_definitions.h  token.h  user.h
source_file/: client_app.c  components  computer_component.c  registration_system.c  registration_system_responses.c  socket_client.c  socket_definitions.c  socket_server.c  token.c  user.c  users
